prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_14.zkc
//error:2:19-25:unknown symbol
fn f12345(c:u8,xs:[u8;c]) {
   //
}
